--- a/client/src/App.css
+++ b/client/src/App.css
@@ -164,6 +164,16 @@
   display: flex;
 }
 
+.flex-col {
+  flex-direction: column;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 0.35rem;
+}
+
 .items-center {
   align-items: center;
 }
