--- a/client/src/index.css
+++ b/client/src/index.css
@@ -98,7 +98,9 @@ body {
 
 .App {
     min-height: 100vh;
+    width: 100%;
     display: flex;
+    flex-direction: column;
     position: relative;
 }
 
